newInstance -> getDeclaredConstructor().newInstance()